# gpa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
configs/ablations/: 0.0.1.yaml  0.0.2.yaml  0.0.3.yaml  0.0.4.yaml  0.1.1.yaml  0.1.2.yaml  0.1.3.yaml  0.1.4.yaml  0.2.1.yaml  0.2.2.yaml  0.2.3.yaml  0.2.4.yaml  0.3.1.yaml  0.3.2.yaml  0.3.3.yaml  0.3.4.yaml
configs/eval/: best_so_far.yaml
configs/hparam-search/: 0000000.yaml  0000010.yaml  0001000.yaml  0001001.yaml  0001010.yaml  0001011.yaml  0010001.yaml  0010010.yaml  0010011.yaml  0011001.yaml  0011010.yaml  0011011.yaml  0100001.yaml  0100010.yaml  0100100.yaml  0100210.yaml  0100211.yaml  0100301.yaml  0100311.yaml  0101010.yaml  0101210.yaml  0101301.yaml  0110000.yaml  0110001.yaml  0110101.yaml  0110301.yaml  0110311.yaml  0111100.yaml  0111201.yaml  1000001.yaml  1000010.yaml  1001010.yaml  1001011.yaml  1010000.yaml  1010001.yaml  1010010.yaml  1011000.yaml  1011010.yaml  1011011.yaml  1100211.yaml  (+10 more)
configs/initial/: 0.0.8.yaml  0.1.1.yaml  0.1.2.yaml  0.1.4.yaml  0.3.1.yaml  (+4 more)
gpa/: configs.py
notebooks/: data_viewer.ipynb  graph_to_seq_euclidean.ipynb  graph_to_seq_one_price_at_a_time.ipynb  graph_to_seq_vertical.ipynb  hparam_analysis.ipynb  knn.ipynb  metrics_viewer.ipynb  predictions_viewer.ipynb  price_tag_text_extraction.ipynb  product_groups.ipynb  random_subgraph_sampling.ipynb  text_matching.ipynb
scripts/: assemble_graph_components.py  eval_heuristics.py  eval_log_reg.py  generate_config.py  sanity_check.py  search.sh
src/: configs.py
(+51 files in other folders)
