[project]
name = "gpa"
version = "0.1.0"
description = "Research repository for Graph-based Price Attribution (GPA)"
readme = "README.md"
authors = [
    { name = "Spencer Young", email = "spencermyoung513@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "imageio[ffmpeg]>=2.37.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "open-clip-torch>=2.32.0",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.4",
    "ruff>=0.11.10",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "torchvision>=0.22.0",
]

[project.scripts]
train = "gpa.training.train_attributor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
